# antigent

./: .gitignore  Makefile  pyproject.toml
infra/docker/: README.md  images.lock.json
pipeline/: __init__.py
pipeline/neoantigen_discovery/: __init__.py  preprocessing.py
pipeline/shared/: __init__.py  config.py  containers.py  storage.py
pipeline/shared/knowledge_base/: __init__.py
pipeline/shared/observability/: __init__.py  _ids.py  cognitive.py  provenance.py  telemetry.py
pipeline/shared/schemas/: __init__.py  base.py  inputs.py  integrity.py  stage1.py
scripts/: pull_images.py
tests/: __init__.py  conftest.py  test_containers.py  test_integrity.py  test_observability.py  test_preprocessing.py  test_preprocessing_docker.py  test_schemas.py  test_storage.py
