[project]
name = "antigent"
version = "0.0.1"
description = "An agentic orchestration framework for personalised neoantigen prediction."
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "pydantic>=2.7",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["pipeline", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: integration test requiring a running Docker daemon (deselect with -m 'not docker')",
]
addopts = "-ra"
